--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="instagram-wrapper">
       <div class="instagram-phone">
-          <img src="imagens/cellular-insta-png.png" alt="celular">
+          <img src="imagens/Cellphone.gif" alt="celular">
           
         </div>
       <div class="instagram-continue">
